2382.	[doc]		Add descriptions of DHCID, IPSECKEY, SPF and SSHFP
			to ARM.

2381.	[port]		dlz/mysql: support multiple install layouts for
			mysql.  <prefix>/include/{,mysql/}mysql.h and
			<prefix>/lib/{,mysql/}. [RT #18152]

2380.	[bug]		dns_view_find() was not returning NXDOMAIN/NXRRSET
			proofs which, in turn, caused validation failures
			for insecure zones immediately below a secure zone
			the server was authoritative for. [RT #18112] 

2379.	[contrib]	queryperf/gen-data-queryperf.py: removed redundant
			TLDs and supported RRs with TTLs [RT #17972]

2378.	[bug]		gssapi_functions{} had a redundant member in BIND 9.5.
			[RT #18169]

2377.	[bug]		Address race condition in dnssec-signzone. [RT #18142]

2376.	[bug]		Change #2144 was not complete.

2375.	[placeholder]

2374.	[bug]		"blackhole" ACLs could cause named to segfault due
			to some uninitialized memory. [RT #18095]

2373.	[bug]		Default values of zone ACLs were re-parsed each time a
			new zone was configured, causing an overconsumption
			of memory. [RT #18092]

2372.	[bug]		Fixed incorrect TAG_HMACSHA256_BITS value [RT #18047]

2371.	[doc]		Add +nsid option to dig man page. [RT #18039]

2370.	[bug]		"rndc freeze" could trigger an assertion in named
			when called on a nonexistent zone. [RT #18050]

2369.	[bug]		libbind: Array bounds overrun on read in bitncmp().
			[RT #18054]

2368.	[port]		Linux: use libcap for capability management if
			possible. [RT# 18026]

2367.	[bug]		Improve counting of dns_resstatscounter_retry
			[RT #18030]

2366.	[bug]		Adb shutdown race. [RT #18021]

2365.	[bug]		Fix a bug that caused dns_acl_isany() to return
			spurious results. [RT #18000]

2364.	[bug]		named could trigger a assertion when serving a
			malformed signed zone. [RT #17828]

2363.	[port]		sunos: pre-set "lt_cv_sys_max_cmd_len=4096;".
			[RT #17513]

2362.   [cleanup]	Make "rrset-order fixed" a compile-time option.
			settable by "./configure --enable-fixed-rrset".
			Disabled by default. [RT #17977]
